Enhance Module 2 notebook with improved GitHub Copilot API setup instructions, including support for Claude models. Updated installation command to suppress output for a cleaner user experience. Added detailed guidance on model options and connection testing, ensuring clarity for users. Adjusted print statements for consistent formatting across outputs.

--- a/01-course/module-02-fundamentals/module2.ipynb
+++ b/01-course/module-02-fundamentals/module2.ipynb
@@ -57,7 +57,7 @@
         "def install_requirements():\n",
         "    try:\n",
         "        # Install from requirements.txt\n",
-        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"requirements.txt\"])\n",
+        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"-r\", \"requirements.txt\"])\n",
         "        print(\"✅ SUCCESS! Module 2 dependencies installed successfully.\")\n",
         "        print(\"📦 Ready for: openai, anthropic, python-dotenv, requests\")\n",
         "    except subprocess.CalledProcessError as e:\n",
@@ -80,11 +80,18 @@
         "\n",
         "Choose your preferred option:\n",
         "\n",
-        "- **Option A: GitHub Copilot API (local proxy)**: Recommended if you don't have OpenAI or CircuIT API access. Follow [GitHub-Copilot-2-API/README.md](../../GitHub-Copilot-2-API/README.md) to authenticate and start the local server, then run the `GitHub Copilot (local proxy)` setup cells below.\n",
+        "- **Option A: GitHub Copilot API (local proxy)** ⭐ **Recommended**: \n",
+        "  - Supports both **Claude** and **OpenAI** models\n",
+        "  - No API keys needed - uses your GitHub Copilot subscription\n",
+        "  - Follow [GitHub-Copilot-2-API/README.md](../../GitHub-Copilot-2-API/README.md) to authenticate and start the local server\n",
+        "  - Run the setup cell below and **edit your preferred provider** (`\"openai\"` or `\"claude\"`) by setting the `PROVIDER` variable\n",
+        "  - Available models:\n",
+        "    - **OpenAI**: gpt-4o, gpt-4, gpt-3.5-turbo, o3-mini, o4-mini\n",
+        "    - **Claude**: claude-3.5-sonnet, claude-3.7-sonnet, claude-sonnet-4\n",
         "\n",
-        "- **Option B: OpenAI API**: If you have OpenAI API access, you can use the `OpenAI` connection cells provided later in this notebook.\n",
+        "- **Option B: OpenAI API**: If you have OpenAI API access, uncomment and run the **Option B** cell below.\n",
         "\n",
-        "- **Option C: CircuIT APIs (Azure OpenAI)**: If you have CircuIT API access, you can use the `CircuIT` connection cells provided later in this notebook.\n"
+        "- **Option C: CircuIT APIs (Azure OpenAI)**: If you have CircuIT API access, uncomment and run the **Option C** cell below.\n"
       ]
     },
     {
@@ -95,28 +102,266 @@
       "source": [
         "# Option A: GitHub Copilot API setup (Recommended)\n",
         "import openai\n",
+        "import anthropic\n",
         "import os\n",
         "\n",
-        "# Configure for local GitHub Copilot proxy\n",
-        "client = openai.OpenAI(\n",
+        "# ============================================\n",
+        "# 🎯 CHOOSE YOUR AI MODEL PROVIDER\n",
+        "# ============================================\n",
+        "# Set your preference: \"openai\" or \"claude\"\n",
+        "PROVIDER = \"claude\"  # Change to \"claude\" to use Claude models\n",
+        "\n",
+        "# ============================================\n",
+        "# 📋 Available Models by Provider\n",
+        "# ============================================\n",
+        "# OpenAI Models (via GitHub Copilot):\n",
+        "#   - gpt-4o (recommended, supports vision)\n",
+        "#   - gpt-4\n",
+        "#   - gpt-3.5-turbo\n",
+        "#   - o3-mini, o4-mini\n",
+        "#\n",
+        "# Claude Models (via GitHub Copilot):\n",
+        "#   - claude-3.5-sonnet (recommended, supports vision)\n",
+        "#   - claude-3.7-sonnet (supports vision)\n",
+        "#   - claude-sonnet-4 (supports vision)\n",
+        "# ============================================\n",
+        "\n",
+        "# Configure clients for both providers\n",
+        "openai_client = openai.OpenAI(\n",
         "    base_url=\"http://localhost:7711/v1\",\n",
         "    api_key=\"dummy-key\"\n",
         ")\n",
         "\n",
-        "def get_chat_completion(messages, model=\"gpt-4\", temperature=0.7):\n",
-        "    \"\"\"Get a chat completion from the AI model.\"\"\"\n",
+        "claude_client = anthropic.Anthropic(\n",
+        "    api_key=\"dummy-key\",\n",
+        "    base_url=\"http://localhost:7711\"\n",
+        ")\n",
+        "\n",
+        "# Set default models for each provider\n",
+        "OPENAI_DEFAULT_MODEL = \"gpt-4o\"\n",
+        "CLAUDE_DEFAULT_MODEL = \"claude-3.5-sonnet\"\n",
+        "\n",
+        "\n",
+        "def _extract_text_from_blocks(blocks):\n",
+        "    \"\"\"Extract text content from response blocks returned by the API.\"\"\"\n",
+        "    parts = []\n",
+        "    for block in blocks:\n",
+        "        text_val = getattr(block, \"text\", None)\n",
+        "        if isinstance(text_val, str):\n",
+        "            parts.append(text_val)\n",
+        "        elif isinstance(block, dict):\n",
+        "            t = block.get(\"text\")\n",
+        "            if isinstance(t, str):\n",
+        "                parts.append(t)\n",
+        "    return \"\\n\".join(parts)\n",
+        "\n",
+        "\n",
+        "def get_openai_completion(messages, model=None, temperature=0.0):\n",
+        "    \"\"\"Get completion from OpenAI models via GitHub Copilot.\"\"\"\n",
+        "    if model is None:\n",
+        "        model = OPENAI_DEFAULT_MODEL\n",
         "    try:\n",
-        "        response = client.chat.completions.create(\n",
+        "        response = openai_client.chat.completions.create(\n",
         "            model=model,\n",
         "            messages=messages,\n",
         "            temperature=temperature\n",
         "        )\n",
         "        return response.choices[0].message.content\n",
         "    except Exception as e:\n",
-        "        return f\"❌ Error: {e}\\\\n💡 Make sure GitHub Copilot proxy is running on port 7711\"\n",
+        "        return f\"❌ Error: {e}\\n💡 Make sure GitHub Copilot proxy is running on port 7711\"\n",
         "\n",
-        "print(\"✅ GitHub Copilot API configured for Module 2!\")\n",
-        "print(\"🔗 Connected to: http://localhost:7711\")\n"
+        "\n",
+        "def get_claude_completion(messages, model=None, temperature=0.0):\n",
+        "    \"\"\"Get completion from Claude models via GitHub Copilot.\"\"\"\n",
+        "    if model is None:\n",
+        "        model = CLAUDE_DEFAULT_MODEL\n",
+        "    try:\n",
+        "        response = claude_client.messages.create(\n",
+        "            model=model,\n",
+        "            max_tokens=8192,\n",
+        "            messages=messages,\n",
+        "            temperature=temperature\n",
+        "        )\n",
+        "        return _extract_text_from_blocks(getattr(response, \"content\", []))\n",
+        "    except Exception as e:\n",
+        "        return f\"❌ Error: {e}\\n💡 Make sure GitHub Copilot proxy is running on port 7711\"\n",
+        "\n",
+        "\n",
+        "def get_chat_completion(messages, model=None, temperature=0.7):\n",
+        "    \"\"\"\n",
+        "    Generic function to get chat completion from any provider.\n",
+        "    Routes to the appropriate provider-specific function based on PROVIDER setting.\n",
+        "    \"\"\"\n",
+        "    if PROVIDER.lower() == \"claude\":\n",
+        "        return get_claude_completion(messages, model, temperature)\n",
+        "    else:  # Default to OpenAI\n",
+        "        return get_openai_completion(messages, model, temperature)\n",
+        "\n",
+        "\n",
+        "def get_default_model():\n",
+        "    \"\"\"Get the default model for the current provider.\"\"\"\n",
+        "    if PROVIDER.lower() == \"claude\":\n",
+        "        return CLAUDE_DEFAULT_MODEL\n",
+        "    else:\n",
+        "        return OPENAI_DEFAULT_MODEL\n",
+        "\n",
+        "\n",
+        "# ============================================\n",
+        "# 🧪 TEST CONNECTION\n",
+        "# ============================================\n",
+        "print(\"🔄 Testing connection to GitHub Copilot proxy...\")\n",
+        "test_result = get_chat_completion([\n",
+        "    {\"role\": \"user\", \"content\": \"test\"}\n",
+        "])\n",
+        "\n",
+        "if test_result and \"Error\" in test_result:\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"❌ CONNECTION FAILED!\")\n",
+        "    print(\"=\"*60)\n",
+        "    print(f\"Provider: {PROVIDER.upper()}\")\n",
+        "    print(f\"Expected endpoint: http://localhost:7711\")\n",
+        "    print(\"\\n⚠️  The GitHub Copilot proxy is NOT running!\")\n",
+        "    print(\"\\n📋 To fix this:\")\n",
+        "    print(\"   1. Open a new terminal\")\n",
+        "    print(\"   2. Navigate to your copilot-api directory\")\n",
+        "    print(\"   3. Run: uv run copilot2api start\")\n",
+        "    print(\"   4. Wait for the server to start (you should see 'Server initialized')\")\n",
+        "    print(\"   5. Come back and rerun this cell\")\n",
+        "    print(\"\\n💡 Need setup help? See: GitHub-Copilot-2-API/README.md\")\n",
+        "    print(\"=\"*60)\n",
+        "else:\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"✅ CONNECTION SUCCESSFUL!\")\n",
+        "    print(\"=\"*60)\n",
+        "    print(f\"🤖 Provider: {PROVIDER.upper()}\")\n",
+        "    print(f\"📦 Default Model: {get_default_model()}\")\n",
+        "    print(f\"🔗 Endpoint: http://localhost:7711\")\n",
+        "    print(f\"\\n💡 To switch providers, change PROVIDER to '{'claude' if PROVIDER.lower() == 'openai' else 'openai'}' and rerun this cell\")\n",
+        "    print(\"=\"*70)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Option B: Direct OpenAI API\n",
+        "\n",
+        "**Setup:** Add your API key to `.env` file, then uncomment and run:\n",
+        "\n",
+        "> 💡 **Note:** This option requires a paid OpenAI API account. If you're using GitHub Copilot, stick with Option A above.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# # Option B: Direct OpenAI API setup\n",
+        "# import openai\n",
+        "# import os\n",
+        "# from dotenv import load_dotenv\n",
+        "\n",
+        "# load_dotenv()\n",
+        "\n",
+        "# client = openai.OpenAI(\n",
+        "#     api_key=os.getenv(\"OPENAI_API_KEY\")  # Set this in your .env file\n",
+        "# )\n",
+        "\n",
+        "# def get_chat_completion(messages, model=\"gpt-4o\", temperature=0.7):\n",
+        "#     \"\"\"Get a chat completion from OpenAI.\"\"\"\n",
+        "#     try:\n",
+        "#         response = client.chat.completions.create(\n",
+        "#             model=model,\n",
+        "#             messages=messages,\n",
+        "#             temperature=temperature\n",
+        "#         )\n",
+        "#         return response.choices[0].message.content\n",
+        "#     except Exception as e:\n",
+        "#         return f\"❌ Error: {e}\"\n",
+        "\n",
+        "# print(\"✅ OpenAI API configured successfully!\")\n",
+        "# print(\"🤖 Using OpenAI's official API\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Option C: CircuIT APIs (Azure OpenAI)\n",
+        "\n",
+        "**Setup:** Configure environment variables (`CISCO_CLIENT_ID`, `CISCO_CLIENT_SECRET`, `CISCO_OPENAI_APP_KEY`) in `.env` file.\n",
+        "\n",
+        "Get values from: https://ai-chat.cisco.com/bridgeit-platform/api/home\n",
+        "\n",
+        "Then uncomment and run:\n",
+        "\n",
+        "> 💡 **Note:** This option is for Cisco employees with CircuIT API access.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# # Option C: CircuIT APIs (Azure OpenAI) setup\n",
+        "# import openai\n",
+        "# import traceback\n",
+        "# import requests\n",
+        "# import base64\n",
+        "# import os\n",
+        "# from dotenv import load_dotenv\n",
+        "# from openai import AzureOpenAI\n",
+        "\n",
+        "# # Load environment variables\n",
+        "# load_dotenv()\n",
+        "\n",
+        "# # Open AI version to use\n",
+        "# openai.api_type = \"azure\"\n",
+        "# openai.api_version = \"2024-12-01-preview\"\n",
+        "\n",
+        "# # Get API_KEY wrapped in token - using environment variables\n",
+        "# client_id = os.getenv(\"CISCO_CLIENT_ID\")\n",
+        "# client_secret = os.getenv(\"CISCO_CLIENT_SECRET\")\n",
+        "\n",
+        "# url = \"https://id.cisco.com/oauth2/default/v1/token\"\n",
+        "\n",
+        "# payload = \"grant_type=client_credentials\"\n",
+        "# value = base64.b64encode(f\"{client_id}:{client_secret}\".encode(\"utf-8\")).decode(\"utf-8\")\n",
+        "# headers = {\n",
+        "#     \"Accept\": \"*/*\",\n",
+        "#     \"Content-Type\": \"application/x-www-form-urlencoded\",\n",
+        "#     \"Authorization\": f\"Basic {value}\",\n",
+        "# }\n",
+        "\n",
+        "# token_response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
+        "# print(token_response.text)\n",
+        "# token_data = token_response.json()\n",
+        "\n",
+        "# client = AzureOpenAI(\n",
+        "#     azure_endpoint=\"https://chat-ai.cisco.com\",\n",
+        "#     api_key=token_data.get(\"access_token\"),\n",
+        "#     api_version=\"2024-12-01-preview\",\n",
+        "# )\n",
+        "\n",
+        "# app_key = os.getenv(\"CISCO_OPENAI_APP_KEY\")\n",
+        "\n",
+        "# def get_chat_completion(messages, model=\"gpt-4o\", temperature=0.7):\n",
+        "#     \"\"\"Get a chat completion from CircuIT APIs.\"\"\"\n",
+        "#     try:\n",
+        "#         response = client.chat.completions.create(\n",
+        "#             model=model,\n",
+        "#             messages=messages,\n",
+        "#             temperature=temperature,\n",
+        "#             user=f'{{\"appkey\": \"{app_key}\"}}',\n",
+        "#         )\n",
+        "#         return response.choices[0].message.content\n",
+        "#     except Exception as e:\n",
+        "#         return f\"❌ Error: {e}\"\n",
+        "\n",
+        "# print(\"✅ CircuIT APIs configured successfully!\")\n",
+        "# print(\"🤖 Using Azure OpenAI via CircuIT\")\n"
       ]
     },
     {
@@ -125,7 +370,11 @@
       "source": [
         "### Step 3: Test Connection\n",
         "\n",
-        "Let's test that everything is working before we begin:\n"
+        "Let's test that everything is working before we begin:\n",
+        "\n",
+        "<div style=\"margin-top:16px; color:#78350f; padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b;\">\n",
+        "<strong>💡 Tip:</strong> If you see long AI responses and the output shows \"Output is truncated. View as a scrollable element\" - <strong>click that link</strong> to see the full response in a scrollable view!\n",
+        "</div>\n"
       ]
     },
     {
@@ -151,9 +400,9 @@
         "print(response)\n",
         "\n",
         "if response and (\"verified\" in response.lower() or \"ready\" in response.lower()):\n",
-        "    print(\"\\\\n🎉 Perfect! Module 2 environment is ready!\")\n",
+        "    print(\"\\n🎉 Perfect! Module 2 environment is ready!\")\n",
         "else:\n",
-        "    print(\"\\\\n⚠️  Setup test complete. Let's continue with the tutorial!\")\n"
+        "    print(\"\\n⚠️  Setup test complete. Let's continue with the tutorial!\")\n"
       ]
     },
     {
@@ -278,7 +527,8 @@
         "response = get_chat_completion(messages)\n",
         "\n",
         "print(\"VAGUE REQUEST RESULT:\")\n",
-        "print(response)"
+        "print(response)\n",
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")"
       ]
     },
     {
@@ -298,7 +548,8 @@
         "response = get_chat_completion(messages)\n",
         "\n",
         "print(\"SPECIFIC REQUEST RESULT:\")\n",
-        "print(response)"
+        "print(response)\n",
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")"
       ]
     },
     {
@@ -328,7 +579,8 @@
         "response = get_chat_completion(messages)\n",
         "\n",
         "print(\"SYSTEM PROMPT RESULT:\")\n",
-        "print(response)"
+        "print(response)\n",
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")"
       ]
     },
     {
@@ -373,7 +625,8 @@
         "response = get_chat_completion(messages)\n",
         "\n",
         "print(\"CODE REVIEWER PERSONA RESULT:\")\n",
-        "print(response)"
+        "print(response)\n",
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")"
       ]
     },
     {
@@ -422,7 +675,7 @@
         "security_response = get_chat_completion(security_messages)\n",
         "print(\"🔒 SECURITY ENGINEER ANALYSIS:\")\n",
         "print(security_response)\n",
-        "print(\"\\\\n\" + \"=\"*50 + \"\\\\n\")\n"
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")\n"
       ]
     },
     {
@@ -452,7 +705,8 @@
         "\n",
         "performance_response = get_chat_completion(performance_messages)\n",
         "print(\"⚡ PERFORMANCE ENGINEER ANALYSIS:\")\n",
-        "print(performance_response)\n"
+        "print(performance_response)\n",
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")"
       ]
     },
     {
@@ -501,7 +755,8 @@
         "\n",
         "qa_response = get_chat_completion(qa_messages)\n",
         "print(\"🧪 QA ENGINEER ANALYSIS:\")\n",
-        "print(qa_response)\n"
+        "print(qa_response)\n",
+        "print(\"\\n\" + \"=\"*50 + \"\\n\")"
       ]
     },
     {
@@ -565,7 +820,8 @@
         "\n",
         "delimiter_response = get_chat_completion(delimiter_messages)\n",
         "print(\"🔧 REFACTORED CODE:\")\n",
-        "print(delimiter_response)\n"
+        "print(delimiter_response)\n",
+        "print(\"\\n\" + \"=\"*70 + \"\\n\")"
       ]
     },
     {
@@ -658,7 +914,8 @@
         "\n",
         "multifile_response = get_chat_completion(multifile_messages)\n",
         "print(\"🏗️ ARCHITECTURAL ANALYSIS:\")\n",
-        "print(multifile_response)\n"
+        "print(multifile_response)\n",
+        "print(\"\\n\" + \"=\"*70 + \"\\n\")"
       ]
     },
     {
@@ -720,7 +977,8 @@
         "\n",
         "few_shot_response = get_chat_completion(few_shot_messages)\n",
         "print(\"📚 CONSISTENT STYLE RESPONSE:\")\n",
-        "print(few_shot_response)\n"
+        "print(few_shot_response)\n",
+        "print(\"\\n\" + \"=\"*70 + \"\\n\")"
       ]
     },
     {
@@ -822,7 +1080,6 @@
         "\n",
         "bad_response = get_chat_completion(bad_messages)\n",
         "print(bad_response)\n",
-        "print(\"\\n\")\n",
         "\n",
         "# GOOD: Force AI to solve it first, then compare\n",
         "print(\"=\" * 70)\n",
@@ -852,7 +1109,7 @@
         "]\n",
         "\n",
         "good_response = get_chat_completion(good_messages)\n",
-        "print(good_response)\n"
+        "print(good_response)"
       ]
     },
     {
